- extracted DB connection setup/teardown into JSP fragment - fixed some tags - fixed CSS

--- a/root/style.css
+++ b/root/style.css
@@ -1,7 +1,7 @@
 body {
 	color:#333333;
 	font-family:Verdana,Helvetica,Arial,sans-serif;
-	# font-size:62.5%;
+	font-size:62.5%;
 }
 
 table.border {
